--- a/index2025090502.html
+++ b/index2025090502.html
@@ -487,25 +487,14 @@
     <div class="view_wrap">
         <div class="content" style="width: 100%; padding-top: 0">
             <div class="section sec_1" id="sec1">
-                <!-- <div class="layout">
-                    <picture class="img">
-                        <source srcset="pc/images/sec_01.png" media="(min-width: 769px)">
-                        <img src="mo/images/sec_01.png" alt="">
-                    </picture>
-                </div> -->
-
                 <!-- 영상  -->
                 <div id="ambassdor-ani" class="ambassdor-ani">
                     <div class="video-container">
-                        <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
-                            <source src="./assets/common/img/event/ambassador_3rd/video/main_visual.mp4?2025091001"
-                                    type="video/mp4">
+                            <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
+                            <source src="./assets/common/img/event/ambassador_3rd/video/main_visual.mp4" type="video/mp4">
                         </video>
-                        <video id="main-video-mo" poster="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/poster.jpg"
-                               autoplay loop muted playsinline
-                               preload="auto">
-                            <source src="./assets/common/img/event/ambassador_3rd/video/main_visual_m.mp4?2025091001"
-                                    type="video/mp4">
+                        <video id="main-video-mo" poster="./assets/common/img/event/ambassador_3rd/mo/poster.jpg" autoplay loop muted playsinline preload="auto">
+                            <source src="./assets/common/img/event/ambassador_3rd/video/main_visual_m.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -514,7 +503,6 @@
                 <div class="sr_only">우리 주변에 꼭 한 명쯤 있는, LG전자를 좋아하는 크리에이터라면 누구나!</div>
                 <div class="sr_only">기간: 2025. 9. 02(화) ~ 09. 21(일)</div>
             </div>
-
             <div class="section sec_2" id="sec2">
                 <div class="_fixed_wrap">
                     <div class="layout">
@@ -572,9 +560,9 @@
             <div class="section sec_3 _fixed_content" id="sec3">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_02_1.png"
+                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_02.png"
                                 media="(min-width: 769px)">
-                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_02_1.png" alt="">
+                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_02.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -582,9 +570,9 @@
             <div class="section sec_4" id="sec4">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_03_1.png"
+                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_03.png"
                                 media="(min-width: 769px)">
-                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_03_1.png" alt="">
+                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_03.png" alt="">
                     </picture>
                 </div>
 
@@ -593,9 +581,9 @@
             <div class="section sec_5" id="sec5">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_04_1.png"
+                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_04.png"
                                 media="(min-width: 769px)">
-                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_04_1.png" alt="">
+                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_04.png" alt="">
                     </picture>
                 </div>
                 <button class="button-apply"
@@ -607,9 +595,9 @@
             <div class="section sec_6 _fixed_content" id="sec6">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_05_1.png"
+                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_05.png"
                                 media="(min-width: 769px)">
-                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_05_1.png" alt="">
+                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_05.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -617,9 +605,9 @@
             <div class="section sec_7 _fixed_content" id="sec7">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_06_1.png"
+                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_06.png"
                                 media="(min-width: 769px)">
-                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_06_1.png" alt="">
+                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_06.png" alt="">
                     </picture>
                 </div>
                 <!-- 비디오 -->
@@ -652,9 +640,9 @@
             <div class="section sec_8" id="sec8">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_07_1.png"
+                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_07.png"
                                 media="(min-width: 769px)">
-                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_07_1.png" alt="">
+                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_07.png" alt="">
                     </picture>
                 </div>
                 <button class="button-apply"
@@ -666,9 +654,9 @@
             <div class="section sec_9" id="sec9">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_08_1.png"
+                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_08.png"
                                 media="(min-width: 769px)">
-                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_08_1.png" alt="">
+                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_08.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -676,9 +664,9 @@
             <div class="section sec_10" id="sec10">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_09_1.png"
+                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_09.png"
                                 media="(min-width: 769px)">
-                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_09_1.png" alt="">
+                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_09.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -1840,7 +1828,7 @@
         </div>
     </div>
 </footer>
-<script src="//developers.kakao.com/sdk/js/kakao.js"></script>
+<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 <script type="text/javascript">
   // 메인 비디오
   function setMainVideoSource() {
@@ -1898,7 +1886,7 @@
 
       if (cleanTarget === "#sec6") {
         if (window.innerWidth > 768) { // PC일 때만 적용
-        //   extraOffset = -25;
+          extraOffset = -25;
         }
       }
 
@@ -2991,8 +2979,6 @@
 </body>
 </html>
 
-
-<!-- <link rel="stylesheet" href="./pc/css/common.css"> -->
 <section class="sky-banner" aria-label="LG전자 앰버서더 지원하기">
     <div class="inner">
         <button class="btn-top" role="button" aria-label="LG전자 앰버서더 지원하기" aria-disabled="false" onClick="gtag('event', 'LG전자 엠버서더 3기', {'event_category': '클릭', 'event_label': 'LG전자 엠버서더 지원하기'});initForm();"><span class="blind">LG전자 앰버서더 지원하기</span></button>
